--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       </p>
 
       <br />
-      <button class="genColor">generate color</button>
-      <button class="saveColor">save color</button><br />
-      <p class="colorName">#colorNameOfHeader</p>
+      <button id="genColor">generate color</button>
+      <button id="saveColor">save color</button><br />
+      <p class="hexColorName">#colorNameOfHeader</p>
     </header>
     <main>
-      <ul>
+      <ul id="colors">
         <li class="color1">#90DDF0</li>
         <!-- <button class="delColor">delete</button> -->
         <li class="color2">#454ADE</li>
@@ -44,5 +44,6 @@
         <!-- <button class="delColor">delete</button> -->
       </ul>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
