feature: random color with name in script.js

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <br />
       <button id="genColor">generate color</button>
       <button id="saveColor">save color</button><br />
-      <p class="hexColorName">#colorNameOfHeader</p>
+      <p id="hexColorName"></p>
     </header>
     <main>
       <ul id="colors">
