add: save color to script.js

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     </header>
     <main>
       <ul id="colors">
-        <li class="color1">#90DDF0</li>
+        <!-- <li class="color1">#90DDF0</li> -->
         <!-- <button class="delColor">delete</button> -->
-        <li class="color2">#454ADE</li>
+        <!-- <li class="color2">#454ADE</li> -->
         <!-- <button class="delColor">delete</button> -->
-        <li class="color3">#B14AED</li>
+        <!-- <li class="color3">#B14AED</li> -->
         <!-- <button class="delColor">delete</button> -->
-        <li class="color4">#E39EC1</li>
+        <!-- <li class="color4">#E39EC1</li> -->
         <!-- <button class="delColor">delete</button> -->
-        <li class="color5">#FAA613</li>
+        <!-- <li class="color5">#FAA613</li> -->
         <!-- <button class="delColor">delete</button> -->
       </ul>
     </main>
