--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       </p>
 
       <br />
-      <button id="genColor">generate color</button>
+      <button id="generateColor">generate color</button>
       <button id="saveColor">save color</button><br />
       <p id="hexColorName"></p>
     </header>
     <main>
-      <ul id="colors">
+      <ul id="ListOfColors">
         <!-- <li class="color1">#90DDF0</li> -->
         <!-- <button class="delColor">delete</button> -->
         <!-- <li class="color2">#454ADE</li> -->
