add: save colors to list in script.js and some adjustments in html and css

--- a/index.html
+++ b/index.html
@@ -31,18 +31,7 @@
       <p id="hexColorName"></p>
     </header>
     <main>
-      <ul id="ListOfColors">
-        <!-- <li class="color1">#90DDF0</li> -->
-        <!-- <button class="delColor">delete</button> -->
-        <!-- <li class="color2">#454ADE</li> -->
-        <!-- <button class="delColor">delete</button> -->
-        <!-- <li class="color3">#B14AED</li> -->
-        <!-- <button class="delColor">delete</button> -->
-        <!-- <li class="color4">#E39EC1</li> -->
-        <!-- <button class="delColor">delete</button> -->
-        <!-- <li class="color5">#FAA613</li> -->
-        <!-- <button class="delColor">delete</button> -->
-      </ul>
+      <ul id="ListOfColors"></ul>
     </main>
     <script src="script.js"></script>
   </body>
